<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Buzzer</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="partyName">Party Name</string>
    <string name="email">Email</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="address">Address</string>
    <string name="phone">Phone Number</string>
    <string name="logout">Logout</string>
    <string name="emailHint">name@mail.com</string>
    <string name="partyNameHint">Last Name</string>
    <string name="recenter">Find Me</string>
    <string name="twoPeople">1-2 People</string>
    <string name="fourPeople">3-4 People</string>
    <string name="sixPeople">5-6 People</string>
    <string name="sevenPlus">7+ People</string>
    <string name="seatNotify">This is a static string.</string>
    <string name="acceptBtn">Accept Seat</string>
    <string name="declineSeat">Decline Seat</string>
    <string name="checkinMessage">Please let us know how many people are in your party:</string>
    <string name="alreadyCheckedIn">You\'re already checked in at this location.</string>
    <string name="cancelCheckinBtn">Cancel Checkin</string>
    <string name="checkinInfo">NOTE: If you are already checked in at another location, checking in here will result in the forfeiture of your other table.</string>
    <string name="checkIn">Check In</string>

</resources>