<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/seatNotifyLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/seatNotify"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/acceptSeatBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/declineSeatBtn"
        android:text="@string/acceptBtn" />

    <Button
        android:id="@+id/declineSeatBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/declineSeat" />

</RelativeLayout>