<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/partyNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/partyName"
        android:layout_margin="5dp"
        android:text="@string/partyName" />

    <EditText
        android:id="@+id/partyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/confirmPassword"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/partyNameLabel"
        android:ems="10"
        android:inputType="textCapWords" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/email"
        android:layout_below="@id/partyNameLabel"
        android:layout_margin="5dp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/confirmPassword"
        android:layout_below="@id/partyName"
        android:layout_toRightOf="@id/emailLabel"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/password"
        android:layout_below="@id/emailLabel"
        android:layout_margin="5dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/confirmPassword"
        android:layout_below="@id/email"
        android:layout_toRightOf="@id/passwordLabel"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/confirmPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/confirmPassword"
        android:layout_below="@id/passwordLabel"
        android:layout_margin="5dp"
        android:text="@string/confirmPassword" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_toRightOf="@id/confirmPasswordLabel"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmPassword"
        android:layout_marginTop="20dp"
        android:text="@string/cancel"
        android:width="75dp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/confirmPassword"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:width="200dp" />

</RelativeLayout>